# Exercise-Awa5.0_CLI_tools_in_C

./: CMakeLists.txt  README.md  TODO.md  awacompiler.c  awainterpreter.c  awaparser.c  awaparser.h  common.h  makefile  vec.c  vec.h
examples/awatalk/: charcode.awa  collatz.awa  fib.awa  hello.awa  reverse.awa  sieve.awa
examples/awatism/: charcode.awasm  collatz.awasm  fib.awasm  hello.awasm  reverse.awasm  sieve.awasm
src/: awac.c  awacompiler.c  awacompiler.h  awai.c  awainterpreter.c  awainterpreter.h  awaparser.c  common.c  makefile  vec.h
