CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(awa_cli_tools)

set(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/awac.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/awai.c
)

set(DEPS
    ${CMAKE_CURRENT_SOURCE_DIR}/src/vec.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/common.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/awaparser.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/awacompiler.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/awainterpreter.c
)

SET(C_STANDARD 99)
SET(C_STANDARD_REQUIRED ON)

IF(WIN32)
    ADD_DEFINITIONS("/wd4996")
    SET_PROPERTY(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})
ELSE()
    ADD_DEFINITIONS("-g" "-pedantic")
ENDIF()

FOREACH(SOURCE_PATH ${SOURCES})
    GET_FILENAME_COMPONENT(EXECUTABLE_NAME ${SOURCE_PATH} NAME_WE)
    ADD_EXECUTABLE(${EXECUTABLE_NAME} ${DEPS} ${SOURCE_PATH})
ENDFOREACH(SOURCE_PATH ${SOURCES})